--- a/thumbs/thumbsapp/fixtures/ideas.json
+++ b/thumbs/thumbsapp/fixtures/ideas.json
@@ -48,5 +48,35 @@
             "title": "Baldur's Gate",
             "description": "Ive been wanting to play this one for a while. Plus Baldur's gate three is coming out soon. Or eventually."
         }
+    },
+    {
+        "model": "thumbsapp.idea",
+        "pk": 6,
+        "fields": {
+            "user_id": 3,
+            "poll_id": 3,
+            "title": "Heath",
+            "description": "Something about that chocolate and toffee mix. This is the best candy to add to literally any other dessert as a topping or filling: ice cream, cake, brownies, whatever."
+        }
+    },
+    {
+        "model": "thumbsapp.idea",
+        "pk": 7,
+        "fields": {
+            "user_id": 2,
+            "poll_id": 3,
+            "title": "Reese's",
+            "description": "I'll tear up a bag of these and fall asleep in the remains."
+        }
+    },
+    {
+        "model": "thumbsapp.idea",
+        "pk": 8,
+        "fields": {
+            "user_id": 1,
+            "poll_id": 3,
+            "title": "Sour Patch Kids",
+            "description": "You already know what it is."
+        }
     }
 ]
